--- a/RadaCode.Web/RadaCode.Web/Web.config
+++ b/RadaCode.Web/RadaCode.Web/Web.config
@@ -3,6 +3,9 @@
 	<configSections>
 		<section name="clientDependency" type="ClientDependency.Core.Config.ClientDependencySection, ClientDependency.Core" requirePermission="false" />
 	</configSections>
+	<connectionStrings>
+		<add name="RadaCodeWebStoreContext" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;Initial catalog=RadaCodeWeb;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"  />
+	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="1.0.0.0" />
 		<add key="ClientValidationEnabled" value="true" />
@@ -22,6 +25,18 @@
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/LogOn" timeout="2880" />
 		</authentication>
+		<membership defaultProvider="WebUserMembershipProvider">
+			<providers>
+				<clear />
+				<add name="WebUserMembershipProvider" type="RadaCode.Web.Application.Membership.WebUserMembershipProvider, RadaCode.Web" connectionStringName="RadaCodeWebStoreContext" />
+			</providers>
+		</membership>
+		<roleManager defaultProvider="WebUserRoleProvider" enabled="true" cacheRolesInCookie="true">
+			<providers>
+				<clear />
+				<add name="WebUserRoleProvider" type="RadaCode.Web.Application.Membership.WebUserRoleProvider, RadaCode.Web" connectionStringName="RadaCodeWebStoreContext" />
+			</providers>
+		</roleManager>
 		<pages>
 			<namespaces>
 				<add namespace="System.Web.Helpers" />
