Testing user repository

--- a/RadaCode.Web/RadaCode.Web/RadaCode.Web.csproj
+++ b/RadaCode.Web/RadaCode.Web/RadaCode.Web.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\Composition\WebCompositionModule.cs" />
     <Compile Include="Application\Membership\WebUserMembershipProvider.cs" />
     <Compile Include="Application\Membership\WebUserRoleProvider.cs" />
     <Compile Include="Application\Routing\DomainData.cs" />
