--- a/RadaCode.Web/packages/repositories.config
+++ b/RadaCode.Web/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\RadaCode.Data.Tests\packages.config" />
   <repository path="..\RadaCode.Web.Core\packages.config" />
   <repository path="..\RadaCode.Web.Data\packages.config" />
   <repository path="..\RadaCode.Web\packages.config" />
