--- a/RadaCode.Web/RadaCode.Web/Web.config
+++ b/RadaCode.Web/RadaCode.Web/Web.config
@@ -7,7 +7,8 @@
 		<add name="RadaCodeWebStoreContext" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;Initial catalog=RadaCodeWeb;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"  />
 	</connectionStrings>
 	<appSettings>
-		<add key="webpages:Version" value="1.0.0.0" />
+		<add key="webpages:Version" value="2.0.0.0" />
+		<add key="PreserveLoginUrl" value="true" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
@@ -16,10 +17,10 @@
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
 				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
 			</assemblies>
 		</compilation>
 		<authentication mode="Forms">
@@ -145,8 +146,19 @@
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+				<assemblyIdentity name="System.Web.Helpers"
+							publicKeyToken="31bf3856ad364e35" />
+				<bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc"
+							publicKeyToken="31bf3856ad364e35" />
+				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="4.0.0.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.WebPages"
+							publicKeyToken="31bf3856ad364e35" />
+				<bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0"/>
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
