--- a/RadaCode.Web/RadaCode.Web/packages.config
+++ b/RadaCode.Web/RadaCode.Web/packages.config
@@ -13,5 +13,7 @@
   <package id="Ninject" version="3.0.0.15" />
   <package id="Ninject.MVC3" version="3.0.0.6" />
   <package id="Ninject.Web.Common" version="3.0.0.7" />
+  <package id="RouteMagic" version="0.2.2.2" />
+  <package id="RouteMagic.Mvc" version="1.2" />
   <package id="WebActivator" version="1.5" />
 </packages>
