--- a/RadaCode.Web/RadaCode.Web/Areas/Expansion/Views/Web.config
+++ b/RadaCode.Web/RadaCode.Web/Areas/Expansion/Views/Web.config
@@ -16,6 +16,8 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="ClientDependency.Core.Mvc"/>
+        <add namespace="ClientDependency.Core"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
