--- a/RadaCode.Web/RadaCode.Web/RadaCode.Web.csproj
+++ b/RadaCode.Web/RadaCode.Web/RadaCode.Web.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>RadaCode.Web</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\RadaCode.Web\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -105,7 +105,7 @@
     <Compile Include="Application\Routing\RoutingModule.cs" />
     <Compile Include="Application\ViewEngine\RadaCodeViewEngine.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
-    <Compile Include="Areas\Expansion\Controllers\ExpansionMapController.cs" />
+    <Compile Include="Areas\Expansion\Controllers\ExpansionController.cs" />
     <Compile Include="Areas\Expansion\ExpansionAreaRegistration.cs" />
     <Compile Include="Areas\Shipyard\Controllers\HomeController.cs" />
     <Compile Include="Areas\Shipyard\ShipyardAreaRegistration.cs" />
@@ -198,7 +198,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Expansion\Models\" />
-    <Folder Include="Areas\Expansion\Views\Shared\" />
     <Folder Include="Areas\Shipyard\Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -245,12 +244,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Expansion\Views\Web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Areas\Expansion\Views\ExpansionMap\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Access\Login.en.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -261,6 +254,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_LoginPartial.en.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Expansion\Views\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Expansion\Views\Expansion\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Expansion\Views\Shared\_Layout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Expansion\Views\Shared\_Layout.en.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Expansion\Views\_ViewStart.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -281,8 +289,7 @@
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>80</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost:1726/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
